<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:id="@+id/relativeLayoutInData"
    tools:context=".InDataActivity">

    <TextView
        style="@style/HeaderStyle"
        android:id="@+id/textViewHeader"
        />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/StepBackgroundColor"
        android:layout_below="@+id/textViewHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:id="@+id/relativeLayout">


        <ImageView
            style="@style/StepStyle"
            android:background="@color/StepNoActiveColor"
            android:id="@+id/imageViewStep1"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageViewStep2"
            />
        <ImageView
            style="@style/StepStyle"
            android:background="@color/StepNoActiveColor"
            android:id="@+id/imageViewStep2"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            style="@style/StepStyle"
            android:background="@color/StepActiveColor"
            android:id="@+id/imageViewStep3"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageViewStep2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/step1Text"
            android:textColor="@color/StepTextColor"
            android:id="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/carName"
        android:textColor="@color/InDataTVTextColor"
        android:id="@+id/textViewNameCar"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/InDataMarginLeftRightNormal"
        android:layout_marginRight="@dimen/InDataMarginLeftRightNormal"
        android:layout_alignParentStart="true" />



    <EditText
        android:layout_width="fill_parent"
        android:layout_height= "@dimen/InDataSizeUnitNormal"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:hint="@string/hondaAccord"

        android:id="@+id/edtInputName"
        android:singleLine="true"
        android:background="@drawable/draw_name_car_edit"
        android:layout_below="@+id/textViewNameCar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/InDataMarginLeftRightNormal"
        android:layout_marginRight="@dimen/InDataMarginLeftRightNormal"
        android:layout_marginTop="@dimen/InDataMarginBetweenElements"



        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/typeFuel"
        android:textColor="@color/InDataTVTextColor"
        android:id="@+id/tvTypeFuel"
        android:layout_marginLeft="@dimen/InDataMarginLeftRightNormal"
        android:layout_marginRight="@dimen/InDataMarginLeftRightNormal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edtInputName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/InDataSizeUnitNormal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/InDataMarginLeftRightNormal"
        android:layout_marginRight="@dimen/InDataMarginLeftRightNormal"
        android:layout_marginTop="@dimen/InDataMarginBetweenElements"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/tvTypeFuel"
        android:focusable="true"
        android:clickable="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/ButtonsFuelStyle"
            android:background="@drawable/draw_left_btn_fuel_active"
            android:layout_weight="0.5"
            android:text="@string/petrol"
            android:id="@+id/btnPetrol"
            android:focusable="true"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/ButtonsFuelStyle"
            android:text="@string/diesel"
            android:layout_weight="0.5"
            android:id="@+id/btnDiesel"
            android:focusable="true"
            />
    </LinearLayout>


    <Button
        style="@style/NavigateButtonStyle"
        android:text="@string/resume"
        android:id="@+id/btnTstAct"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
